--- a/StudentInfoSystem/Pages/_Host.cshtml
+++ b/StudentInfoSystem/Pages/_Host.cshtml
@@ -33,6 +33,7 @@
     <script>
         window.clearInputFields = function() {
             document.getElementById('nameFilter').value = '';
+            document.getElementById('ageFilter').value = '';
             document.getElementById('minMarks').value = '';
             document.getElementById('maxMarks').value = '';
             document.getElementById('gradeFilter').value = '';
